applications/oauth2-proxy-kiwix/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kiwix-library
  namespace: kiwix
spec:
  hostnames:
  - library.thegraveshouse.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: traefik-gateway
    namespace: traefik
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: kiwix
      namespace: kiwix
      port: 8080
      weight: 1
    filters:
    - extensionRef:
        group: traefik.io
        kind: Middleware
        name: kiwix-library-oauth-redirect
      type: ExtensionRef
    matches:
    - path:
        type: PathPrefix
        value: /
